--- a/datepicker/utils/scss/variables.scss
+++ b/datepicker/utils/scss/variables.scss
@@ -22,6 +22,8 @@ $theme-blue:      #5bc0de !default;
 $theme-dark-blue: #337ab7 !default;
 $theme-red:       #d9534f !default;
 $theme-orange:    #f0ad4e !default;
+$theme-primary: $primary-color !default;
+$theme-secondary: $secondary-color !default;
 
 $disabled-background:  rgba(221, 221, 221, 0.3) !default;
 $disabled-color:       #f5f5f5 !default;
@@ -33,6 +35,8 @@ $theme-list: (
   'dark-blue': $theme-dark-blue,
   'red': $theme-red,
   'orange': $theme-orange,
+  'primary': $theme-primary,
+  'secondary': $theme-secondary,
 ) !default;
 
 $container-padding: 5px;
